# django-react-typescript-boilerplate

./: Makefile  README.md
backend/: .gitignore  Makefile  pyproject.toml  requirements.txt
backend/api/api/: settings.py  urls.py  views.py
backend/api/authentication/: custom_authentication.py  urls.py
backend/api/todo/: models.py  serializers.py  urls.py  views.py
backend/api/todo/migrations/: 0001_initial.py
backend/api/todo/tests/: test_models.py  test_serializers.py  test_views.py
backend/api/users/: admin.py  models.py  serializers.py  views.py
backend/api/users/migrations/: 0001_initial.py
frontend/: bun.lockb  cypress.config.ts  index.html  package.json  vite.config.ts
frontend/cypress/e2e/: home_page.cy.ts  todo_list.cy.ts
frontend/src/: App.tsx  DataTable.tsx  theme.tsx
frontend/src/components/: DataTable.tsx  LogoutModal.tsx  SignInCard.tsx  ToDo.tsx  ToDoTable.tsx  ToggleColorMode.tsx
frontend/src/pages/: Dashboard.tsx  DataTable.tsx  Login.tsx  Logout.tsx
frontend/src/store/: useAuthStore.ts  useUserSettingsStore.ts
